fix: resolved conversations